# zebras-stitching

./: .gitignore  00_notebook_elastix_transforms.ipynb  00_notebook_elastix_transforms.py  00_notebook_elastix_transforms_batch.py  00_notebook_elastix_transforms_fused.py  01_notebook_elastix_unwrap_keypoints.py  01_notebook_unwrap_keypoints.py  02_notebook_clean_unwrapped_tracks.py  03_notebook_compute_behaviour_metrics.py  03_notebook_compute_metrics.py  04_notebook_deepforest.py  05_notebook_error_trees.py  05_notebook_odm.py  05_notebook_reliable_trees.py  06_notebook_extract_sfm_keyframes.py  06_notebook_opensfm.py  07_notebook_interpolate_sfm.py  07_notebook_read_opensfm_3d_data.py  08_notebook_apply_interpolated_sfm.py  08_notebook_interpolate_sfm.py  09_notebook_apply_interpolated_sfm.py  09_notebook_export_3d_trajs_csv.py  10_notebook_compute_tree_error.py  270Predictions_clean.analysis.h5  270Predictions_clean.csv  README.md  blender_script_tested.py  camera_utils.py  clean_unwrapped_tracks.py  clean_zebra_tracks.py  compute_orthophoto_blender.py  notebook_clean_unwrapped_tracks.py  notebook_compute_metrics.py  notebook_unwrap_keypoints.py  notebook_unwrap_trajectory.py  pyproject.toml  requirements.txt  utils.py  utils_rotate.py
data/: 20250325_2228_id_sfm_3d_unwrapped_20250512_201642.npz  20250325_2228_id_sfm_3d_unwrapped_plane_20250512_213652.npz  20250325_2228_id_sfm_transforms_20250512_201642.csv  21Jan_007_tracked_trees_20250505_100631_sfm_interp_PCS_2d_20250514_233110.h5  21Jan_007_tracked_trees_20250505_100631_sfm_interp_WCS_2d_z0_20250514_233123.h5  (+10 more)
(+483 files in other folders)
